[project]
name = "flappy-bird-rl"
version = "0.1.0"
description = "使用强化学习玩 Flappy Bird 游戏"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flappy_bird_rl"]

[tool.rye]
managed = true
dev-dependencies = [] 